--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -3,25 +3,35 @@ p {
 }
 
 p.info {
-	font-size: 10pt;
+	font-size: small;
+	background-color: #dfdfdf;
 }
 
 h1 {
-	background-color: #7f7fcf;
+	color: white;
+	text-shadow: 0px 0px 10px navy;
 }
 
 h2 {
-	border: solid 1px black;
 	margin: 5px;
+	font-family: cursive;
+	color: #3f3faf;
+	background: linear-gradient(to right, white, #ffefaf);
+}
+
+img {
+	float: right;
 }
 
 div#zentai {
-	display: flex;
-	flex-direction: row;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 10px;
+	height: 200px;
 	width: 1024px;
 }
 
 div#zentai > div {
-	margin-left: 5px;
+	padding: 5px;
 	background-color: #ffefaf;
 }
