--- a/project.css
+++ b/project.css
@@ -17,7 +17,9 @@ p {
 h2 {
     background:  #ababab;
 }
-ul {
+
+li {
+    list-style-type: none;
     background:  rgb(255, 190, 50);
     color: black;
 }
