--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h2.Thema {
 
 h2.project {
     color: white;
-    background: linear-gradient(to right, red, orange 15%, yellow 30%, green 45%, blue 60%, indigo 75%, purple);
+    background: linear-gradient(to right, red, orange 15%, yellow 30%, green 45%, blue 60%, indigo 75%, purple 95%);
 }
 
 h2.kazuate {
